@@ -9,6 +9,10 @@
 <INPUT TYPE="radio" NAME="wango" VALUE="wango!">
 <INPUT TYPE="radio" NAME="wango" VALUE="wongo!">
 <INPUT TYPE="text" NAME="dingo" VALUE="dingo2">
+<input type="hidden" name="__no_value">
+<input type="hidden" name="__value" value>
+<input type="hidden" name="__value_empty" value="">
+<input type="hidden" name="__value_full" value="full">
 </FORM>
 </BODY>
 </HTML>
